# ez_brain-viewer

./: .gitignore  README.md  pyproject.toml
scripts/: demo.py
src/brain_viewer/: __main__.py  atlases.py  config.py  external_atlases.py  meshing.py  scene.py  templates.py
src/brain_viewer/ui/: control_panel.py  export_dialog.py  layer_row.py  main_window.py  template_row.py
src/ez_brain_viewer/: __main__.py  atlases.py  config.py  custom_atlases.py  external_atlases.py  icons.py  meshing.py  scene.py  templates.py
src/ez_brain_viewer/data/labels/: jhu_wm_labels.csv
src/ez_brain_viewer/ui/: control_panel.py  custom_atlas_dialog.py  export_dialog.py  layer_row.py  main_window.py
src/ezbv/ui/: control_panel.py
tests/: test_smoke.py
